# shor

./: .gitignore  Cargo.toml  README.md  prime_power_check.rs
src/: baillie_psw_prime.rs  continued_fraction.rs  continued_fractions.rs  find_first_d.rs  fourier.rs  gcd.rs  is_even.rs  jacobi_symbol.rs  jacobi_symbol_extended.rs  log2.rs  logger.rs  lucas.rs  main.rs  modular_pow.rs  plots.rs  prime_power_check.rs  pseudo_prime.rs  quantum_register.rs  sieve_of_eratosthenes.rs
