[package]
name = "shor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.0"
num = "0.4.0"
rand ="0.8.4"
plotters = "0.3.1"
rustfft = "6.0.1"

log = { version = "0.4.14" }
colour = "0.6.0"